--- a/PosterScoresFrontend/src/index.html
+++ b/PosterScoresFrontend/src/index.html
@@ -2,6 +2,7 @@
 <html ng-app="posterScoresFrontend">
   <head>
     <meta charset="utf-8">
+    <base href="/" target="">
     <title>posterScoresFrontend</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
